--- a/static/uploader.css
+++ b/static/uploader.css
@@ -14,6 +14,9 @@
 * {
     box-sizing: border-box;
 }
+html, body{
+ overflow-x: hidden;
+ }
 
 body {
     font-family: 'Inter', -apple-system, sans-serif;
